feature(stats): get total Orders and dates of range of dates